tests/fixtures/dimensions/change_blast_radius/bad/u9.ts
import { core } from "./core";
export const u9 = core + 9;
